# MaterialFlow

./: README.md
BACKEND_APP/: .gitignore  Dockerfile  README.md  docker-compose.yml  files.txt  models.txt  pyproject.toml
BACKEND_APP/apps/analitics/: apps.py
BACKEND_APP/apps/analytics/: admin.py  apps.py  models.py  utils.py
BACKEND_APP/apps/analytics/migrations/: 0001_initial.py
BACKEND_APP/apps/employees/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  trash.py  utils.py  views.py
BACKEND_APP/apps/employees/migrations/: 0001_initial.py  0002_employees_created_at_employees_phone.py  0003_salary.py  0004_alter_salary_employee.py  0005_employees_address.py  0006_alter_employees_phone.py
BACKEND_APP/apps/materials/: admin.py  apps.py  constants.py  models.py
BACKEND_APP/apps/materials/migrations/: 0001_initial.py  0002_alter_material_name.py
BACKEND_APP/apps/orders/: __init__.py  admin.py  apps.py  constants.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
BACKEND_APP/apps/orders/migrations/: 0001_initial.py  0002_alter_order_payment_status_alter_order_total_price.py  (+2 more)
BACKEND_APP/apps/production/: admin.py  apps.py  models.py  serializers.py  views.py
BACKEND_APP/apps/users/: admin.py  apps.py  models.py  serializers.py  views.py
BACKEND_APP/backend/: settings.py  urls.py
BACKEND_APP/telegram_bot/: bot.py  config.py  keyboards.py  middleware.py  states.py  utils.py
BACKEND_APP/telegram_bot/handlers/: auth.py  clients.py  employees.py  orders.py  production.py
(+7 files in other folders)
